# django-app-helper

./: .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  helper.py  pyproject.toml  requirements-docs.txt  requirements-test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md
.github/workflows/: lint.yml  linting.yml  publish.yml  test.yml
app_helper/: __init__.py  asgi.py  base_test.py  default_settings.py  main.py  pytest_runner.py  runner.py  server.py  urls.py  utils.py
app_helper/locale/en/LC_MESSAGES/: django.po
app_helper/test_utils/: AUTHORS  app_helper.py  app_helper_extra.py  app_helper_extra_runner.py  cms_helper.py  cms_helper_custom.py  cms_helper_extra.py  cms_helper_extra_runner.py  conftest.py  helper.py  helper_no_cms.py  runners.py
app_helper/test_utils/custom_user/: models.py
app_helper/test_utils/example1/: cms_apps.py  cms_plugins.py  models.py
app_helper/test_utils/example1/data/: django_0001_initial.py  south_0001_initial.py  south_0001_partial.py
app_helper/test_utils/example1/locale/en/LC_MESSAGES/: placeholder
app_helper/test_utils/example1/templates/: fake_plugin.html
app_helper/test_utils/example1/tests/: __init__.py  test_fake.py  test_pytest.py
app_helper/test_utils/example2/: models.py
app_helper/tests/: test_commands.py
changes/: 107.feature  142.feature  143.feature  148.feature  149.feature  152.misc  155.bugfix  157.bugfix  159.feature  161.bugfix  165.bugfix  167.feature  188.bugfix  189.feature  191.feature  196.feature  198.feature  199.feature  202.bugfix  204.feature  208.feature  220.bugfix  225.bugfix  232.bugfix  244.feature  252.feature  255.bugfix  288.bugfix  290.feature  311.feature  92.bugfix
djangocms_helper/: __init__.py  base_test.py  default_settings.py  main.py  runner.py  test_base.py  urls.py  utils.py
djangocms_helper/test_data/templates/: base.html
djangocms_helper/test_utils/: cms_helper.py  cms_helper_custom.py  cms_helper_extra.py  cms_helper_extra_runner.py  runners.py
djangocms_helper/test_utils/custom_user/: models.py
djangocms_helper/test_utils/example/: __init__.py  models.py
djangocms_helper/test_utils/example/tests/: __init__.py  test_fake.py
djangocms_helper/test_utils/example1/: cms_app.py  cms_apps.py  cms_plugins.py  models.py
djangocms_helper/test_utils/example1/data/: django_0001_partial.py
djangocms_helper/test_utils/example1/templates/: fake_plugin.html
djangocms_helper/test_utils/example1/tests/: test_fake.py
djangocms_helper/test_utils/example2/: models.py
djangocms_helper/tests/: test_commands.py
docs/: Makefile  asgi.rst  basetest.rst  conf.py  contributing.rst  development.rst  index.rst  introduction.rst  make.bat  migrating.rst  pytest.rst  reference.rst  runner.rst  settings.rst
tests/: test_base_classes.py  test_commands.py  test_others.py
tests/test_utils/: AUTHORS  cms_helper_custom.py  cms_helper_extra_runner.py  conftest.py  helper_no_cms.py  runners.py
tests/test_utils/custom_user/: models.py
tests/test_utils/example1/: cms_app.py  cms_apps.py  cms_plugins.py  models.py  urls.py  views.py
tests/test_utils/example1/data/: django_0001_initial.py  django_0001_partial.py
tests/test_utils/example1/tests/: __init__.py  test_fake.py  test_pytest.py
tests/test_utils/example2/: models.py
