[metadata]
name = django-app-helper
version = attr: app_helper.__version__
url = https://github.com/nephila/django-app-helper
project_urls =
    Documentation = https://django-app-helper.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = Helper for django applications development
long_description = file: README.rst, HISTORY.rst
license = GPLv2+
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
install_requires =
	dj-database-url
	docopt
    mock;python_version<"3.3"
	six
setup_requires =
    setuptools
packages = find:
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
test_suite = app_helper.tests
zip_safe = False

[options.package_data]
* = *.txt, *.rst
app_helper = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
pyflakes = pyflakes<2.1;django-cms>=3.4,<3.8
cms = django-cms>=3.4,<3.8"

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
