[bumpversion]
current_version = 2.3.0.dev0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
    {major}.{minor}.{patch}.{release}{relver}
    {major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
    dev
    a
    b
    rc
    gamma

[bumpversion:file:app_helper/__init__.py]

[metadata]
name = django-app-helper
version = attr: app_helper.__version__
url = https://github.com/nephila/django-app-helper
project_urls =
    Documentation = https://django-app-helper.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = Helper for django applications development
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = GPLv2+
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    dj-database-url
    docopt
    six
setup_requires =
    setuptools==47.1.1
packages = find:
python_requires = >=3.5
test_suite = app_helper.tests
zip_safe = False

[options.package_data]
* = *.txt, *.rst
app_helper = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.entry_points]
console_scripts =
    django-app-helper = app_helper.main:main

[options.extras_require]
pyflakes = pyflakes<2.1;django-cms>=3.4,<3.8
cms = django-cms>=3.4,<3.8"

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
