[metadata]
name = django-app-helper
version = attr: app_helper.__version__
url = https://github.com/nephila/django-app-helper
project_urls = 
	Documentation = https://django-app-helper.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.digital
description = Helper for django applications development
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = GPLv2+
license_files = LICENSE
classifiers = 
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Framework :: Django :: 5.0
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
include_package_data = True
install_requires = 
	dj-database-url
	docopt
	six
	setuptools; python_version>="3.12"
setup_requires = 
	setuptools
packages = find:
python_requires = >=3.7
test_suite = app_helper.tests
zip_safe = False
keywords = 
	django
	tests
	development
	pytest
	django-cms

[options.package_data]
* = *.txt, *.rst
app_helper = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.entry_points]
console_scripts = 
	django-app-helper = app_helper.main:main

[options.extras_require]
cms = django-cms>=3.7,<3.12
async = 
	channels
	daphne
docs =
	sphinx-rtd-theme

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
